; ModuleID = '/home/carl/AnghaBench/vlc/src/text/extr_filesystem.c_vlc_scandir.c'
source_filename = "/home/carl/AnghaBench/vlc/src/text/extr_filesystem.c_vlc_scandir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_scandir(i8* %0, i8*** %1, i32 (i8*)* %2, i32 (i8**, i8**)* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8***, align 8
  %7 = alloca i32 (i8*)*, align 8
  %8 = alloca i32 (i8**, i8**)*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8*** %1, i8**** %6, align 8
  store i32 (i8*)* %2, i32 (i8*)** %7, align 8
  store i32 (i8**, i8**)* %3, i32 (i8**, i8**)** %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32* @vlc_opendir(i8* %11)
  store i32* %12, i32** %9, align 8
  store i32 -1, i32* %10, align 4
  %13 = load i32*, i32** %9, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %4
  %16 = load i32*, i32** %9, align 8
  %17 = load i8***, i8**** %6, align 8
  %18 = load i32 (i8*)*, i32 (i8*)** %7, align 8
  %19 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %8, align 8
  %20 = call i32 @vlc_loaddir(i32* %16, i8*** %17, i32 (i8*)* %18, i32 (i8**, i8**)* %19)
  store i32 %20, i32* %10, align 4
  %21 = load i32*, i32** %9, align 8
  %22 = call i32 @closedir(i32* %21)
  br label %23

23:                                               ; preds = %15, %4
  %24 = load i32, i32* %10, align 4
  ret i32 %24
}

declare dso_local i32* @vlc_opendir(i8*) #1

declare dso_local i32 @vlc_loaddir(i32*, i8***, i32 (i8*)*, i32 (i8**, i8**)*) #1

declare dso_local i32 @closedir(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
